samples/_failures_safe/1761269072_904da7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_50d2ad1d.c: In function ‘main’:
./samples/SAFE/__tmp_50d2ad1d.c:148:19: error: expected ‘)’ at end of input
  148 |     add_edge(&g, 2
      |             ~     ^
      |                   )
./samples/SAFE/__tmp_50d2ad1d.c:148:5: error: too few arguments to function ‘add_edge’
  148 |     add_edge(&g, 2
      |     ^~~~~~~~
./samples/SAFE/__tmp_50d2ad1d.c:30:6: note: declared here
   30 | void add_edge(Graph *g, int u, int v, int weight) {
      |      ^~~~~~~~
./samples/SAFE/__tmp_50d2ad1d.c:148:5: error: expected declaration or statement at end of input
  148 |     add_edge(&g, 2
      |     ^~~~~~~~
